# Kimera-RPGO

./: .gitignore  CMakeLists.txt  package.xml  setup.cfg  setup.py
cmake/: KimeraRPGOConfig.cmake.in  kimera_rpgoConfig.cmake.in
include/KimeraRPGO/: SolverParams.h
include/KimeraRPGO/outlier/: OutlierRemoval.h  Pcm.h
include/kimera_rpgo/: rpgo.h
include/kimera_rpgo/pcm/: geometry_utils.h
include/kimera_rpgo/solver/: gnc_solver.h  least_squares_solver.h  solver.h
include/kimera_rpgo/utils/: pose_4dof.h
python/: CMakeLists.txt  pybind11.CMakeLists.txt.in
src/: RobustSolver.cpp  rpgo.cpp
src/pcm/: pcm.cpp
src/solver/: gnc_solver.cpp  least_squares_solver.cpp  solver.cpp
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt
