[metadata]
name = kimera_rpgo
version = 2.0.0
author = Yun Chang
author_email = yunchang@mit.edu
classifiers =
    Programming Language :: Python :: 3
    License :: TODO

[options]
zip_safe = False
package_dir =
    = python/src/
packages = find:
python_requires = >=3.6
install_requires =
    numpy

[options.packages.find]
where = python/src
